--- a/information_retrieval.ipynb
+++ b/information_retrieval.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,17 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "154\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"Doc generation\"\"\"\n",
     "def sentence(n): return ' '.join(random.choice(words) for _ in range(n)) + '.'\n",
@@ -117,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,12 +128,14 @@
     "def tokenize(s): return (tok.lower() for tok in re.findall(r'\\w+', s))\n",
     "\n",
     "def index_doc(doc):\n",
+    "    \"\"\"Returns {term: [offset]}\"\"\"\n",
     "    index = defaultdict(list)\n",
     "    for pos, term in enumerate(tokenize(doc['content'])):\n",
     "        index[term].append(pos)\n",
     "    return index\n",
     "\n",
     "def rev_index(docs):\n",
+    "    \"\"\"Returns {term: [docid]}\"\"\"\n",
     "    index = defaultdict(list)\n",
     "    for doc in docs:\n",
     "        for term in tokenize(doc['content']):\n",
@@ -153,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +278,6 @@
       "fairest creatures: ['Sonnet I']\n",
       "her beauty: ['Sonnet IX', 'Sonnet XI', 'Sonnet XIX', 'Sonnet XXII', 'Sonnet XLI', 'Sonnet CXXVII']\n",
       "spring: ['Sonnet I', 'Sonnet LIII', 'Sonnet LXIII', 'Sonnet XCVIII', 'Sonnet CII']\n",
-      "my love: ['Sonnet X', 'Sonnet XIII', 'Sonnet XV', 'Sonnet XIX', 'Sonnet XX', 'Sonnet XXI', 'Sonnet XXII', 'Sonnet XXIII', 'Sonnet XXVI', 'Sonnet XXIX', 'Sonnet XXX', 'Sonnet XXXI', 'Sonnet XXXII', 'Sonnet XXXIII', 'Sonnet XXXIV', 'Sonnet XXXV', 'Sonnet XXXVI', 'Sonnet XXXVII', 'Sonnet XL', 'Sonnet XLII', 'Sonnet XLV', 'Sonnet XLVI', 'Sonnet XLVII', 'Sonnet XLIX', 'Sonnet LI', 'Sonnet LVII', 'Sonnet LXI', 'Sonnet LXII', 'Sonnet LXIII', 'Sonnet LXIV', 'Sonnet LXV', 'Sonnet LXVI', 'Sonnet LXXI', 'Sonnet LXXII', 'Sonnet LXXVI', 'Sonnet LXXIX', 'Sonnet LXXX', 'Sonnet LXXXII', 'Sonnet LXXXV', 'Sonnet LXXXVIII', 'Sonnet LXXXIX', 'Sonnet XCI', 'Sonnet XCII', 'Sonnet XCIX', 'Sonnet C', 'Sonnet CI', 'Sonnet CII', 'Sonnet CV', 'Sonnet CVII', 'Sonnet CVIII', 'Sonnet CIX', 'Sonnet CX', 'Sonnet CXII', 'Sonnet CXIV', 'Sonnet CXV', 'Sonnet CXVII', 'Sonnet CXVIII', 'Sonnet CXIX', 'Sonnet CXXII', 'Sonnet CXXIV', 'Sonnet CXXX', 'Sonnet CXXXI', 'Sonnet CXXXII', 'Sonnet CXXXVI', 'Sonnet CXXXVII', 'Sonnet CXXXVIII', 'Sonnet CXXXIX', 'Sonnet CXL', 'Sonnet CXLI', 'Sonnet CXLII', 'Sonnet CXLV', 'Sonnet CXLVII', 'Sonnet CXLVIII', 'Sonnet CXLIX', 'Sonnet CL', 'Sonnet CLI', 'Sonnet CLII', 'Sonnet CLIII', 'Sonnet CLIV']\n",
       "tender: ['Sonnet I', 'Sonnet XXII', 'Sonnet XLV', 'Sonnet LXXXIII', 'Sonnet CXX', 'Sonnet CXXVIII', 'Sonnet CXLI']\n",
       "thine own: ['Sonnet I', 'Sonnet II', 'Sonnet XIX', 'Sonnet XXXVIII', 'Sonnet XLIX', 'Sonnet LXIX', 'Sonnet CXLII']\n"
      ]
@@ -295,7 +288,6 @@
     "    \"fairest creatures\",\n",
     "    \"her beauty\",\n",
     "    \"spring\",\n",
-    "    \"my love\",\n",
     "    \"tender\",\n",
     "    \"thine own\",\n",
     "]\n",
@@ -305,11 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"TF-IDF\"\"\"\n",
+    "\"\"\"Scoring\"\"\"\n",
     "\n",
     "def docfreqs(docs):\n",
     "    docfreqs = Counter()\n",
@@ -332,15 +324,70 @@
     "        yield scores\n",
     "        \n",
     "def tfidf_table(docs):\n",
-    "    return {doc['docid']: scores for doc, scores in zip(docs, tfidf(docs))}"
+    "    return {doc['docid']: scores for doc, scores in zip(docs, tfidf(docs))}\n",
+    "\n",
+    "def score_tfidf(doc, query):\n",
+    "    pass  # TODO: implement\n",
+    "   \n",
+    "def score_freq(doc_index, query):\n",
+    "    return sum(len(doc_index[term]) for term in query)\n",
+    "\n",
+    "def close_hits(doc_index, query, threshold):\n",
+    "    hits = [doc_index[term] for term in query]\n",
+    "    for idx in range(len(hits[0])):\n",
+    "        offset = hits[0][idx]\n",
+    "        indices = [idx] + [bisect.bisect_left(hits[j], offset) for j in range(1, len(hits))]\n",
+    "        offsets = [hits[j][idx] if idx < len(hits[j]) else -1 for j, idx in enumerate(indices)]\n",
+    "        for j in range(1, len(offsets)):\n",
+    "            if offsets[j] == -1 or offsets[j-1] == -1:\n",
+    "                continue\n",
+    "            distance = offsets[j] - offsets[j-1]\n",
+    "            if distance <= threshold:\n",
+    "                yield distance\n",
+    "    \n",
+    "def score_proximity(doc_index, query, prox_bins=None, count_bins=None):\n",
+    "    if not query:\n",
+    "        return 0.0\n",
+    "    prox_bins = prox_bins or [(0, 1.0), (1, 0.9), (2, 0.8), (3, 0.7), (4, 0.6), (5, 0.5)]\n",
+    "    count_bins = count_bins or [(0, 0.0), (1, 0.5), (2, 0.75), (3, 0.85), (4, 0.95), (5, 1.0)]\n",
+    "    prox_counts = [0 for _ in prox_bins]\n",
+    "    threshold = max(prox for prox, weight in prox_bins)\n",
+    "    for distance in close_hits(doc_index, query, threshold=threshold):\n",
+    "        binidx = next(i for i in range(len(prox_bins)) if distance <= prox_bins[i][0])\n",
+    "        prox_counts[binidx] += 1\n",
+    "    prox_weights = [weight for prox, weight in prox_bins]\n",
+    "    count_weights = [next((weight for threshold, weight in count_bins if count <= threshold), 0.0)\n",
+    "                    for count in prox_counts]\n",
+    "    return np.dot(prox_weights, count_weights)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "2.475, 0.0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-6ce63126b27a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mscore\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mexpect\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{score}, {expect}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mcheck_proximity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"a b c\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"a b c\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-29-6ce63126b27a>\u001b[0m in \u001b[0;36mcheck_proximity\u001b[0;34m(content, query, expect)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mquery\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscore_proximity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex_doc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mscore\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mexpect\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{score}, {expect}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mcheck_proximity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"a b c\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"a b c\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: 2.475, 0.0"
+     ]
+    }
+   ],
+   "source": [
+    "def check_proximity(content, query, expect):\n",
+    "    doc = mkdoc(content=content)\n",
+    "    query = parse_query(query)\n",
+    "    score = score_proximity(index_doc(doc), query)\n",
+    "    assert score == expect, f\"{score}, {expect}\"\n",
+    "    \n",
+    "check_proximity(\"a b c\", \"a b c\", 0.0)  # FIXME"
+   ]
   }
  ],
  "metadata": {
