--- a/information_retrieval.ipynb
+++ b/information_retrieval.ipynb
@@ -297,11 +297,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Scoring\"\"\"\n",
+    "\n",
+    "from bisect import bisect_left\n",
+    "\n",
+    "class SortedIter:\n",
+    "    def __init__(self, items):\n",
+    "        self.items = items\n",
+    "        self.pos = 0\n",
+    "    def __bool__(self):\n",
+    "        return self.pos < len(self.items)\n",
+    "    def __next__(self):\n",
+    "        self.pos += 1\n",
+    "    def seek(self, val):\n",
+    "        self.pos = bisect_left(self.items, val)\n",
+    "    def val(self, default=None):\n",
+    "        return self.items[self.pos] if self.pos < len(self.items) else default\n",
+    "\n",
+    "def close_hits(doc_index, query, threshold=None):\n",
+    "    if not query:\n",
+    "        return\n",
+    "    if len(query) == 1:\n",
+    "        for _ in doc_index[query[0]]:\n",
+    "            yield 0\n",
+    "        return\n",
+    "    iters = [SortedIter(doc_index[term])for term in query]\n",
+    "    while iters[0]:\n",
+    "        for i in range(1, len(iters)):\n",
+    "            if not iters[i-1]:\n",
+    "                continue\n",
+    "            iters[i].seek(iters[i-1].val())\n",
+    "            if not iters[i]:\n",
+    "                continue\n",
+    "            distance = iters[i].val() - iters[i-1].val()\n",
+    "            if not threshold or distance <= threshold:\n",
+    "                yield distance\n",
+    "        next(iters[0])\n",
+    "\n",
+    "def bin_idx(bins, v):\n",
+    "    return next(i for i in reversed(range(len(bins))) if v >= bins[i][0])\n",
+    "\n",
+    "def bin_weight(bins, v):\n",
+    "    return bins[bin_idx(bins, v)][1]\n",
+    "\n",
+    "class ProximityScore:\n",
+    "    def __init__(self, prox_bins=None, count_bins=None):\n",
+    "        self.prox_bins = prox_bins   or [(0, 1.0), (1, 0.9), (2, 0.8), (3, 0.7), (4, 0.6), (5, 0.5), (10, 0.0)]\n",
+    "        self.count_bins = count_bins or [(0, 0.0), (1, 0.5), (2, 0.75), (3, 0.85), (4, 0.95), (5, 1.0)]\n",
+    "        self.counts = [0 for _ in prox_bins]\n",
+    "    def add(self, distance):\n",
+    "        idx = bin_idx(self.prox_bins, distance)\n",
+    "        self.counts[idx] += 1\n",
+    "    def finish(self):\n",
+    "        prox_weights = [weight for prox, weight in self.prox_bins]\n",
+    "        count_weights = [bin_weight(count_bins, count) for count in self.counts]\n",
+    "        return np.dot(prox_weights, count_weights)\n",
+    "        \n",
+    "    \n",
+    "def score_proximity(doc_index, query, prox_bins=None, count_bins=None):\n",
+    "    score = ProximityScore(prox_bins, count_bins)\n",
+    "    max_prox = max(prox for prox, weight in score.prox_bins)\n",
+    "    for distance in close_hits(doc_index, query, threshold=max_prox):\n",
+    "        score.add(distance)\n",
+    "    return score.finish()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_close_hits(content, query, expect):\n",
+    "    doc = mkdoc(content=content)\n",
+    "    query = parse_query(query)\n",
+    "    distances = list(close_hits(index_doc(doc), query))\n",
+    "    assert distances == expect, f\"{distances}, {expect}\"\n",
+    "\n",
+    "test_cases = [\n",
+    "    (\"a a a\", \"a\", [0, 0, 0]),\n",
+    "    (\"a b\", \"a b\", [1]),\n",
+    "    (\"a b c\", \"a c\", [2]),\n",
+    "    (\"a b c a d b\", \"a b c\", [1, 1, 2]),\n",
+    "    ('a b d c a d d b', 'a b c', [1, 2, 3])\n",
+    "]\n",
+    "for args in test_cases:\n",
+    "    check_close_hits(*args)\n",
+    "    \n",
+    "prox_bins  = [(0, 1), (2, 0.75), (3, 0.5)]\n",
+    "count_bins = [(0, 0), (1, 0.5), (2, 1.0)]    \n",
+    "    \n",
+    "def check_proximity(content, query, expect):\n",
+    "    doc = mkdoc(content=content)\n",
+    "    query = parse_query(query)\n",
+    "    score = score_proximity(index_doc(doc), query, prox_bins=prox_bins, count_bins=count_bins)\n",
+    "    assert score == expect, f\"{score}, {expect}\"\n",
+    "\n",
+    "test_cases = [\n",
+    "    ('a', 'a', 0.5),\n",
+    "    ('a a', 'a', 1.0),\n",
+    "    ('a b', 'a b', 0.5),\n",
+    "    ('a c b', 'a b', 0.75 * 0.5),\n",
+    "    ('a b d c a d d b', 'a b c', (1 * 0.5) + (0.75 * 0.5) + (0.5 * 0.5))\n",
+    "]\n",
+    "for args in test_cases:\n",
+    "    check_proximity(*args)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def docfreqs(docs):\n",
     "    docfreqs = Counter()\n",
@@ -330,63 +441,7 @@
     "    pass  # TODO: implement\n",
     "   \n",
     "def score_freq(doc_index, query):\n",
-    "    return sum(len(doc_index[term]) for term in query)\n",
-    "\n",
-    "def close_hits(doc_index, query, threshold):\n",
-    "    hits = [doc_index[term] for term in query]\n",
-    "    for idx in range(len(hits[0])):\n",
-    "        offset = hits[0][idx]\n",
-    "        indices = [idx] + [bisect.bisect_left(hits[j], offset) for j in range(1, len(hits))]\n",
-    "        offsets = [hits[j][idx] if idx < len(hits[j]) else -1 for j, idx in enumerate(indices)]\n",
-    "        for j in range(1, len(offsets)):\n",
-    "            if offsets[j] == -1 or offsets[j-1] == -1:\n",
-    "                continue\n",
-    "            distance = offsets[j] - offsets[j-1]\n",
-    "            if distance <= threshold:\n",
-    "                yield distance\n",
-    "    \n",
-    "def score_proximity(doc_index, query, prox_bins=None, count_bins=None):\n",
-    "    if not query:\n",
-    "        return 0.0\n",
-    "    prox_bins = prox_bins or [(0, 1.0), (1, 0.9), (2, 0.8), (3, 0.7), (4, 0.6), (5, 0.5)]\n",
-    "    count_bins = count_bins or [(0, 0.0), (1, 0.5), (2, 0.75), (3, 0.85), (4, 0.95), (5, 1.0)]\n",
-    "    prox_counts = [0 for _ in prox_bins]\n",
-    "    threshold = max(prox for prox, weight in prox_bins)\n",
-    "    for distance in close_hits(doc_index, query, threshold=threshold):\n",
-    "        binidx = next(i for i in range(len(prox_bins)) if distance <= prox_bins[i][0])\n",
-    "        prox_counts[binidx] += 1\n",
-    "    prox_weights = [weight for prox, weight in prox_bins]\n",
-    "    count_weights = [next((weight for threshold, weight in count_bins if count <= threshold), 0.0)\n",
-    "                    for count in prox_counts]\n",
-    "    return np.dot(prox_weights, count_weights)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "2.475, 0.0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-6ce63126b27a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mscore\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mexpect\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{score}, {expect}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mcheck_proximity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"a b c\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"a b c\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-29-6ce63126b27a>\u001b[0m in \u001b[0;36mcheck_proximity\u001b[0;34m(content, query, expect)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mquery\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscore_proximity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex_doc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mscore\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mexpect\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{score}, {expect}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mcheck_proximity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"a b c\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"a b c\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: 2.475, 0.0"
-     ]
-    }
-   ],
-   "source": [
-    "def check_proximity(content, query, expect):\n",
-    "    doc = mkdoc(content=content)\n",
-    "    query = parse_query(query)\n",
-    "    score = score_proximity(index_doc(doc), query)\n",
-    "    assert score == expect, f\"{score}, {expect}\"\n",
-    "    \n",
-    "check_proximity(\"a b c\", \"a b c\", 0.0)  # FIXME"
+    "    return sum(len(doc_index[term]) for term in query)\n"
    ]
   }
  ],
